aggiornamento package.jsons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript",
+  "name": "musix",
   "version": "1.0.0",
   "description": "Test per JavaScript e pratica HTML & CSS",
   "main": "test.js",
